--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -1,7 +1,7 @@
 #
 # translate hint
 #
-hint=你是一个翻译，下面是跟战斗机相关的英语，翻译成简体中文，但不要使用markdown输出, 保持原文的换行格式，不要添加多余的解释。遇到全大写的缩略词保持缩略词原样。
+hint=你是一个翻译，下面是跟战斗机F/A 18相关的英语，翻译成简体中文，但不要使用markdown输出, 保持原文的换行格式，不要添加多余的解释。遇到全大写的缩略词保持缩略词原样。
 
 #
 # available options:deepseek, doubao, openai
@@ -37,3 +37,10 @@ maxTokens=4096
 # minimum translated length
 #
 minimumLength=12
+
+#
+# the value of the specified filter will not be translated.
+# multiple filter attributes can be specified, but the prefix must start with "filter".
+#
+filters1=
+filters2=
