--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -40,7 +40,20 @@ minimumLength=12
 
 #
 # the value of the specified filter will not be translated.
-# multiple filter attributes can be specified, but the prefix must start with "filter".
+# multiple filter attributes can be specified, but the prefix must start with "filters".
 #
 filters1=
 filters2=
+
+#
+# the value of the specified key filter will not be translated.
+# multiple filter attributes can be specified, but the prefix must start with "keyFilters".
+# for example: 
+# keyFilters1=DictKey_WptName_
+# keyFilters2=DictKey_GroupName_
+# keyFilters3=DictKey_UnitName_
+# keyFilters4=....
+#
+keyFilters1=DictKey_UnitName_
+keyFilters2=DictKey_WptName_
+keyFilters3=DictKey_GroupName_
