--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -9,11 +9,16 @@ hint=你是一个翻译，下面是跟战斗机F/A 18相关的英语，翻译成
 translator=deepseek
 
 #
+# whether to take the original English text
+#
+original=false
+
+#
 # available options:
 # https://ark.cn-beijing.volces.com/api/v3 for doubao and deepseek
 # https://api.openai.com/v1 for openai
 #
-baseURL=https://ark.cn-beijing.volces.com/api/v3
+baseURL=https://api.openai.com/v1
 #
 # your api key
 #
@@ -26,7 +31,7 @@ model=
 #
 # model temperature
 #
-temperature=-1
+temperature=0.1
 
 #
 # model max tokens
@@ -57,3 +62,10 @@ filters2=
 keyFilters1=DictKey_UnitName_
 keyFilters2=DictKey_WptName_
 keyFilters3=DictKey_GroupName_
+
+#
+# the value of the specified source will be translated to the target.
+# multiple source and target attributes can be specified, but the prefix must start with "source" and "target".
+#
+source1=
+target1=
