--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -1,12 +1,12 @@
 #
 # translate hint
 #
-hint=你是一个翻译，下面是跟战斗机F/A 18相关的英语，翻译成简体中文，但不要使用markdown输出, 保持原文的换行格式，不要添加多余的解释。遇到全大写的缩略词保持缩略词原样。
+hint=你是一个军事方面的翻译，下面是DCS World跟F-16C叙利亚野鼬鼠相关任务的英语，翻译成简体中文，不要添加多余的解释以及脑补多余的对话，当输入只有一行时输出也确保一行，也不要使用markdown输出, 保持原文的换行格式，遇到全大写的缩略词保持缩略词原样。下面括号内的词保持原文(Alpha, Bravo, Popeye,Player,Devil,Sword,Rotor,Bug,Warden,Incirlik,Sentinel),呼号也不翻译
 
 #
 # available options:deepseek, doubao, openai
 #
-translator=deepseek
+translator=openai
 
 #
 # whether to take the original English text
@@ -15,10 +15,9 @@ original=false
 
 #
 # available options:
-# https://ark.cn-beijing.volces.com/api/v3 for doubao and deepseek
 # https://api.openai.com/v1 for openai
 #
-baseURL=https://api.openai.com/v1
+baseURL=https://api.deepseek.com/v1
 #
 # your api key
 #
@@ -26,12 +25,12 @@ apiKey=
 #
 # your model
 #
-model=
+model=deepseek-chat
 
 #
 # model temperature
 #
-temperature=0.1
+temperature=1.3
 
 #
 # model max tokens
@@ -47,8 +46,49 @@ minimumLength=12
 # the value of the specified filter will not be translated.
 # multiple filter attributes can be specified, but the prefix must start with "filters".
 #
-filters1=
-filters2=
+filters1=BUTTON
+filters2=ECM Button
+filters4=JAMMER OUTPUT
+filters6=JAMMER COOLING
+filters7=INSERT
+filters8=NO JAMMER OUTPUT
+filters10=JAMMER HEAT
+filters11=ECM XMIT POS 3
+filters15=NO PERMISSION TO ENTER RUNWAY
+filters16=JUAMMER OVERHEATED
+filters17=LASER ON
+filters18=ECM XMIT POS 1/2
+filters19=COMM
+filters20=F15 CAP NORTH
+filters21=JAMMER UNAVAILABLE
+filters25=POWER ON
+filters26=HOLD UNTIL CLEAR
+filters27=ENTER WIND TEXT & AUDIO
+filters29=SET STARTING MESSAGE
+filters30=XMIT POS 1 OR 2
+filters31=FLAG 122 ON
+filters35=TRIGGER
+filters36=WAIT CMS RIGHT
+filters38=JAMMER EMITTING
+filters39=ADD TOWER
+filters40=MASTER ARM
+filters41=ASK
+filters42=JAMMER COOLED
+filters43=LASER OFF
+filters44=EXIT MISSION MESSAGE
+filters45=ECM MASTER
+filters52=WAIT CMS
+filters53=CMS AFT
+filters54=CMS MANUAL
+filters56=CMS RIGHT
+filters57=CMS SEMI
+filters59=CMS AUTO
+filters60=HEAT PENALTY
+filters61=ECM Power
+filters63=JAMMER STOP EMITTING
+filters65=JAMMER NOT OPERATE
+filters66=JAMMER OPERATE
+filters67=JAMMER UNAVAILABLE
 
 #
 # the value of the specified key filter will not be translated.
@@ -62,6 +102,7 @@ filters2=
 keyFilters1=DictKey_UnitName_
 keyFilters2=DictKey_WptName_
 keyFilters3=DictKey_GroupName_
+keyFilters4=DictKey_ActionRadioText_
 
 #
 # the value of the specified source will be translated to the target.
@@ -69,3 +110,4 @@ keyFilters3=DictKey_GroupName_
 #
 source1=
 target1=
+
