--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -21,7 +21,7 @@ baseURL=https://api.deepseek.com/v1
 #
 # your api key
 #
-apiKey=
+apiKey=sk-480f05852610422c8d1ae29610e46f5b
 #
 # your model
 #
@@ -46,49 +46,8 @@ minimumLength=12
 # the value of the specified filter will not be translated.
 # multiple filter attributes can be specified, but the prefix must start with "filters".
 #
-filters1=BUTTON
-filters2=ECM Button
-filters4=JAMMER OUTPUT
-filters6=JAMMER COOLING
-filters7=INSERT
-filters8=NO JAMMER OUTPUT
-filters10=JAMMER HEAT
-filters11=ECM XMIT POS 3
-filters15=NO PERMISSION TO ENTER RUNWAY
-filters16=JUAMMER OVERHEATED
-filters17=LASER ON
-filters18=ECM XMIT POS 1/2
-filters19=COMM
-filters20=F15 CAP NORTH
-filters21=JAMMER UNAVAILABLE
-filters25=POWER ON
-filters26=HOLD UNTIL CLEAR
-filters27=ENTER WIND TEXT & AUDIO
-filters29=SET STARTING MESSAGE
-filters30=XMIT POS 1 OR 2
-filters31=FLAG 122 ON
-filters35=TRIGGER
-filters36=WAIT CMS RIGHT
-filters38=JAMMER EMITTING
-filters39=ADD TOWER
-filters40=MASTER ARM
-filters41=ASK
-filters42=JAMMER COOLED
-filters43=LASER OFF
-filters44=EXIT MISSION MESSAGE
-filters45=ECM MASTER
-filters52=WAIT CMS
-filters53=CMS AFT
-filters54=CMS MANUAL
-filters56=CMS RIGHT
-filters57=CMS SEMI
-filters59=CMS AUTO
-filters60=HEAT PENALTY
-filters61=ECM Power
-filters63=JAMMER STOP EMITTING
-filters65=JAMMER NOT OPERATE
-filters66=JAMMER OPERATE
-filters67=JAMMER UNAVAILABLE
+filters1=
+filters2=
 
 #
 # the value of the specified key filter will not be translated.
@@ -102,7 +61,7 @@ filters67=JAMMER UNAVAILABLE
 keyFilters1=DictKey_UnitName_
 keyFilters2=DictKey_WptName_
 keyFilters3=DictKey_GroupName_
-keyFilters4=DictKey_ActionRadioText_
+# keyFilters4=DictKey_ActionRadioText_
 
 #
 # the value of the specified source will be translated to the target.
