--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -4,6 +4,11 @@
 hint=你是一个军事方面的翻译，下面是DCS World跟F-16C叙利亚野鼬鼠相关任务的英语，翻译成简体中文，不要添加多余的解释以及脑补多余的对话，当输入只有一行时输出也确保一行，也不要使用markdown输出, 保持原文的换行格式，遇到全大写的缩略词保持缩略词原样。下面括号内的词保持原文(Alpha, Bravo, Popeye,Player,Devil,Sword,Rotor,Bug,Warden,Incirlik,Sentinel),呼号也不翻译
 
 #
+# supported language zh-CN, ja-JP, ko-KR
+#
+language=zh-CN
+
+#
 # available options:deepseek, doubao, openai
 #
 translator=openai
