--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -1,7 +1,7 @@
 #
 # translate hint
 #
-hint=你是一个军事方面的翻译，下面是DCS World跟F-16C叙利亚野鼬鼠相关任务的英语，翻译成简体中文，不要添加多余的解释以及脑补多余的对话，当输入只有一行时输出也确保一行，也不要使用markdown输出, 保持原文的换行格式，遇到全大写的缩略词保持缩略词原样。下面括号内的词保持原文(Alpha, Bravo, Popeye,Player,Devil,Sword,Rotor,Bug,Warden,Incirlik,Sentinel),呼号也不翻译
+hint=你是一个军事方面的翻译，下面是DCS World F/A-18C-Raven One第二部Dominant Fury战役的英语对话，这是根据小说改编的战役，请翻译成简体中文，不要添加多余的解释以及补充出多余的对话，不要使用markdown输出, 保持原文的换行格式
 
 #
 # supported language zh-CN, ja-JP, ko-KR
@@ -11,7 +11,7 @@ language=zh-CN
 #
 # the number of texts to use for translation one time
 #
-batchSize=48
+batchSize=36
 
 #
 # available options:deepseek, doubao, openai
@@ -68,7 +68,7 @@ filters2=
 keyFilters1=DictKey_UnitName_
 keyFilters2=DictKey_WptName_
 keyFilters3=DictKey_GroupName_
-keyFilters4=DictKey_ActionRadioText_
+#keyFilters4=DictKey_ActionRadioText_
 
 #
 # the value of the specified source will be translated to the target.
