--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -32,7 +32,7 @@ apiKey=
 #
 # your model
 #
-model=deepseek-chat
+model=deepseek-reasoner
 
 #
 #
@@ -81,6 +81,11 @@ keyFilters3=DictKey_GroupName_
 #
 source1=
 target1=
+
+#
+# available service: edge-tts, tts
+#
+ttsService=edge-tts
 
 ttsProxy=
 
