--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -83,7 +83,8 @@ source1=
 target1=
 
 #
-# available service: edge-tts, tts
+# available service: edge-tts
+# currently only edge-tts is supported
 #
 ttsService=edge-tts
 
