--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,25 +5,33 @@ on:
 
 jobs:
   build:
-    name: Upload Release Asset
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     permissions:
       contents: write
+
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'adopt'
         check-latest: false
+
     - name: Build with Maven
       run: mvn -B install -DskipTests
-    - name: Create Tag
+
+    - name: Read version
       run: |
-        echo "RELEASE_TAG=`cat ./src/main/resources/.version`" >> $GITHUB_ENV
-    - name: Create Release
-      id: create_release
+        RELEASE_TAG=$(cat ./src/main/resources/.version)
+        RELEASE_VER=${RELEASE_TAG#v}
+        echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
+        echo "RELEASE_VER=$RELEASE_VER" >> $GITHUB_ENV
+
+    # （可选）GitHub Release
+    - name: Create GitHub Release
       uses: ncipollo/release-action@v1
       with:
         allowUpdates: true
@@ -33,3 +41,32 @@ jobs:
         draft: false
         prerelease: false
         token: ${{ secrets.GITHUB_TOKEN }}
+
+    # ===== Docker 部分 =====
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and Push Docker Image
+      id: docker_build
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_USER }}/miz-translator:latest
+          ${{ secrets.DOCKER_USER }}/miz-translator:${{ env.RELEASE_TAG }}
+
+    - name: Image digest
+      run: echo "Digest=${{ steps.docker_build.outputs.digest }}"
