--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,8 +65,8 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          ${{ secrets.DOCKER_USER }}/miz-translator:latest
-          ${{ secrets.DOCKER_USER }}/miz-translator:${{ env.RELEASE_TAG }}
+          ${{ secrets.DOCKER_USER }}/${{ secrets.REPO }}:latest
+          ${{ secrets.DOCKER_USER }}/${{ secrets.REPO }}:${{ env.RELEASE_TAG }}
 
     - name: Image digest
       run: echo "Digest=${{ steps.docker_build.outputs.digest }}"
