--- a/src/main/resources/trans.conf
+++ b/src/main/resources/trans.conf
@@ -1,7 +1,7 @@
 #
 # translate hint
 #
-hint=你是一个军事方面的翻译，下面是DCS World F/A-18C-Raven One第二部Dominant Fury战役的英语对话，这是根据小说改编的战役，请翻译成简体中文，不要添加多余的解释以及补充出多余的对话，不要使用markdown输出, 保持原文的换行格式
+hint=你是一个军事方面的翻译，下面是DCS World 中战役的英语文本，这个文本包含无线电对话,战役简介等等. 请翻译成简体中文，不要添加多余的解释以及补充出多余的对话，不要使用markdown输出, 保持原文的换行格式
 
 #
 # docker 
